Fixed language button alignment

--- a/src/components/MainMenu/mainMenu.module.scss
+++ b/src/components/MainMenu/mainMenu.module.scss
@@ -1,116 +1,116 @@
 .MainMenu {
-	height: 80px;
-	width: 100vw;
-	background-color: #fff;
-	position: fixed;
-	z-index: 1000;
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
-	transition: 0.3s;
+    height: 80px;
+    width: 100vw;
+    background-color: #fff;
+    position: fixed;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    transition: 0.3s;
 }
 
 .MainMenuBoxShadow {
-	transition: 0.3s;
-	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    transition: 0.3s;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 .buttonsContainer {
-	margin: 0 auto;
-	width: 500px;
-	height: 100%;
-	display: none;
-	align-items: center;
-	justify-content: flex-end;
+    margin: 0 auto;
+    width: 500px;
+    height: 100%;
+    display: none;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .buttonsContainer button {
-	outline: none;
+    outline: none;
 }
 
 .showMenuModal,
 .hideMenuModal {
-	position: fixed;
-	display: flex;
-	flex-direction: column;
-	top: 80px;
-	width: 100vw;
-	background-color: #fff;
-	z-index: 900;
-	transition: 0.7s;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 80px;
+    width: 100vw;
+    background-color: #fff;
+    z-index: 900;
+    transition: 0.7s;
 }
 
 .showMenuModal {
-	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 .hideMenuModal {
-	transform: translateY(-102%);
+    transform: translateY(-102%);
 }
 
 .modalBackground,
 .fakeModalBackground {
-	width: 100%;
-	background-color: rgba(0, 0, 0, 0.65);
-	position: fixed;
-	z-index: 800;
-	cursor: pointer;
-	opacity: 1;
-	backdrop-filter: blur(2px);
-	transition: 0.5s, z-index 0s;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.65);
+    position: fixed;
+    z-index: 800;
+    cursor: pointer;
+    opacity: 1;
+    backdrop-filter: blur(2px);
+    transition: 0.5s, z-index 0s;
 }
 
 .modalBackground {
-	height: 100vh;
+    height: 100vh;
 }
 
 .hideModalBackground {
-	opacity: 0;
-	z-index: -1;
-	cursor: default;
+    opacity: 0;
+    z-index: -1;
+    cursor: default;
 }
 
 .languageBtn {
-	position: fixed;
-	right: calc(10% - 10px + 60px + 4px);
-	top: 22px;
-	color: #2f7ef5;
-	font-size: 25px;
-	font-weight: 400;
-	background-color: transparent;
-	border: none;
-	cursor: pointer;
-	transition: 0.3s;
-	border-radius: 5px;
-	padding: 2px 8px 4px 8px;
-	text-transform: uppercase;
-	z-index: 1500;
+    position: fixed;
+    right: calc(10% - 10px + 60px + 4px);
+    top: 20px;
+    color: #2f7ef5;
+    font-size: 25px;
+    font-weight: 400;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 5px;
+    padding: 6px 8px 4px;
+    text-transform: uppercase;
+    z-index: 1500;
 }
 
 .languageBtn:hover {
-	background-color: rgba(47, 126, 245, 0.2);
+    background-color: rgba(47, 126, 245, 0.2);
 }
 
 @media (min-width: 600px) {
-	.buttonsContainer {
-		display: flex;
-	}
+    .buttonsContainer {
+        display: flex;
+    }
 
-	.showMenuModal {
-		display: none;
-	}
+    .showMenuModal {
+        display: none;
+    }
 
-	.languageBtn {
-		left: calc((100vw - 500px) / 2);
-	}
+    .languageBtn {
+        left: calc((100vw - 500px) / 2);
+    }
 }
 
 @media screen and (min-width: 1165px) {
-	.buttonsContainer {
-		width: 1075px;
-	}
+    .buttonsContainer {
+        width: 1075px;
+    }
 
-	.languageBtn {
-		left: calc((100vw - 1075px) / 2);
-	}
+    .languageBtn {
+        left: calc((100vw - 1075px) / 2);
+    }
 }
